# asymmetric-numeral-systems

./: .gitignore  Cargo.toml
ans-ordering/: Cargo.toml
ans-ordering/src/: lib.rs  main.rs
compare-ansu-phase/: Cargo.toml
compare-ansu-phase/src/: main.rs
dump-encoding-tables-4symbol-phased/: Cargo.toml
dump-encoding-tables-4symbol-phased/src/: main.rs
encoded-length-vs-probability/: Cargo.toml
encoded-length-vs-probability/src/: main.rs
measure/: Cargo.toml
measure/src/: main.rs
ordering-exp-10digit-4symbol/: Cargo.toml
ordering-exp-10digit-4symbol/src/: main.rs
ordering-exp-2symbol/: Cargo.toml
ordering-exp-2symbol-20bit/: Cargo.toml
ordering-exp-2symbol-20bit/src/: main.rs
ordering-exp-2symbol/src/: main.rs
short-ans/: Cargo.toml
short-ans/src/: main.rs
src/: cliches.rs  compare-ansu-phase.rs  ordering-exp-10digit-4symbol.rs  ordering-exp-2symbol-20bit.rs  ordering-exp-2symbol.rs  reduced-symbol-space.rs  short-ans.rs  streaming_ans.rs
streaming-ans/: Cargo.toml
streaming-ans/src/: main.rs
symbol-table/: Cargo.toml
symbol-table/src/: lib.rs
test-data/: Makefile  bar-chart.sh  compute-encoding-ratios.py  fetch.sh  graph-encoder-phase.sh  graph-table-variations-4.sh  graph-table-variations.sh
